# music-recommender

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  check_gpu.py  embeddings.py  pyproject.toml
.github/workflows/: publish.yml
src/: config.py  logger.py  main.py  utils.py  vector_store.py  worker.py
