[project]
name = "melodion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.121.3",
    "laion-clap>=1.1.7",
    "mutagen>=1.47.0",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "torchvision==0.19.0",
    "uvicorn>=0.38.0",
	"torch==2.4.0",
]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
